klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/association/ForeignKeyMultiplicityErrorTest.klass
package dummy

association ForeignKeyMultiplicity
{
    parent: DummyParent[0..1];
    children: DummyChild[0..*];

    relationship this.id == DummyChild.parentId
}

class DummyParent
{
    id: Long key;
}

class DummyChild
{
    id: Long key;
    parentId: Long private;
}
